<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.leafcare.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".ui.home.fragments.AddPlantFragment">

        <!--        TODO: add progress bar logic-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp">

            <!-- Plant Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Plant Type (Dropdown) -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:id="@+id/til_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <AutoCompleteTextView
                    android:hint="@string/type"
                    android:id="@+id/plantTypeDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Height -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/height_in_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plant_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plant_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Add Photo Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_photo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_button"
                android:text="@string/plus_photo"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@color/pale_green" />

            <!-- Error Message -->
            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.error}"
                tools:text="error"
                android:layout_gravity="center"
                android:textColor="@color/red"
                android:visibility="visible"
                android:layout_marginTop="32dp" />


        </LinearLayout>

        <!-- Save Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>